--- a/epam-jdi-gradle/settings.gradle
+++ b/epam-jdi-gradle/settings.gradle
@@ -1,2 +1,8 @@
 rootProject.name = 'epam-jdi-gradle'
+include 'acceptance-tests'
+include 'test-config'
+include 'tests-common'
+include 'acceptance-tests:cucumber-acceptance-tests'
+findProject(':acceptance-tests:cucumber-acceptance-tests')?.name = 'cucumber-acceptance-tests'
+include 'acceptance-tests'
 
