--- a/epam-jdi-gradle/build.gradle
+++ b/epam-jdi-gradle/build.gradle
@@ -1,14 +1,32 @@
 plugins {
+    id 'org.springframework.boot' version '2.3.3.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
+allprojects {
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'java'
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+
+        testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
+
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        testImplementation('org.springframework.boot:spring-boot-starter-test') {
+            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+        }
+
+        compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
+        testCompile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.6.1'
+    }
 }
