--- a/epam-jdi-gradle/build.gradle
+++ b/epam-jdi-gradle/build.gradle
@@ -19,14 +19,26 @@ allprojects {
 
     dependencies {
 
-        testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
-
+        testCompile group: 'junit', name: 'junit', version: '4.13'
         implementation 'org.springframework.boot:spring-boot-starter-web'
+        compile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '4.2.0'
+        compile group: 'io.javaslang', name: 'javaslang', version: '2.0.6'
+        compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
+        testCompile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.6.1'
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
+    }
 
-        compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
-        testCompile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.6.1'
+    //doesn't build without this
+    bootJar {
+        enabled = false
+    }
+    jar {
+        enabled = true
+    }
+
+    test {
+        useJUnitPlatform()
     }
 }
