add selenium cases spring support

--- a/epam-jdi-gradle/settings.gradle
+++ b/epam-jdi-gradle/settings.gradle
@@ -6,4 +6,9 @@ include 'acceptance-tests:cucumber-acceptance-tests'
 findProject(':acceptance-tests:cucumber-acceptance-tests')?.name = 'cucumber-acceptance-tests'
 include 'acceptance-tests'
 include 'tests-common'
+include 'tests-config'
+include 'acceptance-tests'
+include 'junit-tests'
+include 'acceptance-tests:junit-tests'
+findProject(':acceptance-tests:junit-tests')?.name = 'junit-tests'
 
