--- a/epam-jdi-gradle/build.gradle
+++ b/epam-jdi-gradle/build.gradle
@@ -18,16 +18,16 @@ allprojects {
     }
 
     dependencies {
-
-        testCompile group: 'junit', name: 'junit', version: '4.13'
         implementation 'org.springframework.boot:spring-boot-starter-web'
         compile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '4.2.0'
         compile group: 'io.javaslang', name: 'javaslang', version: '2.0.6'
         compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
-        testCompile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.6.1'
+        testCompile("io.github.bonigarcia:webdrivermanager:4.2.0")
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.2'
     }
 
     //doesn't build without this
