--- a/epam-jdi-gradle/build.gradle
+++ b/epam-jdi-gradle/build.gradle
@@ -18,6 +18,7 @@ allprojects {
     }
 
     dependencies {
+        compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
         implementation 'org.springframework.boot:spring-boot-starter-web'
         compile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '4.2.0'
         compile group: 'io.javaslang', name: 'javaslang', version: '2.0.6'
